impls/monero.dart/lib/src/generated_bindings_wownero.g.dart


  late final _WOWNERO_Wallet_setRefreshFromBlockHeightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('WOWNERO_Wallet_setRefreshFromBlockHeight');
  late final _WOWNERO_Wallet_setRefreshFromBlockHeight =
      _WOWNERO_Wallet_setRefreshFromBlockHeightPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int)>();

  int WOWNERO_Wallet_getRefreshFromBlockHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_getRefreshFromBlockHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_getRefreshFromBlockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_getRefreshFromBlockHeight');
  late final _WOWNERO_Wallet_getRefreshFromBlockHeight =
      _WOWNERO_Wallet_getRefreshFromBlockHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  void WOWNERO_Wallet_setRecoveringFromSeed(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromSeed,
  ) {
    return _WOWNERO_Wallet_setRecoveringFromSeed(
      wallet_ptr,
      recoveringFromSeed,
    );
  }

  late final _WOWNERO_Wallet_setRecoveringFromSeedPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'WOWNERO_Wallet_setRecoveringFromSeed');
  late final _WOWNERO_Wallet_setRecoveringFromSeed =
      _WOWNERO_Wallet_setRecoveringFromSeedPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void WOWNERO_Wallet_setRecoveringFromDevice(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromDevice,
  ) {
    return _WOWNERO_Wallet_setRecoveringFromDevice(
      wallet_ptr,
      recoveringFromDevice,
    );
  }

  late final _WOWNERO_Wallet_setRecoveringFromDevicePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'WOWNERO_Wallet_setRecoveringFromDevice');
  late final _WOWNERO_Wallet_setRecoveringFromDevice =
      _WOWNERO_Wallet_setRecoveringFromDevicePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void WOWNERO_Wallet_setSubaddressLookahead(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int major,
    int minor,
  ) {
    return _WOWNERO_Wallet_setSubaddressLookahead(
      wallet_ptr,
      major,
      minor,
    );
  }

  late final _WOWNERO_Wallet_setSubaddressLookaheadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Uint32)>>('WOWNERO_Wallet_setSubaddressLookahead');
  late final _WOWNERO_Wallet_setSubaddressLookahead =
      _WOWNERO_Wallet_setSubaddressLookaheadPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, int)>();

  bool WOWNERO_Wallet_connectToDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_connectToDaemon(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_connectToDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_connectToDaemon');
  late final _WOWNERO_Wallet_connectToDaemon =
      _WOWNERO_Wallet_connectToDaemonPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_connected(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_connected(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_connectedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_connected');
  late final _WOWNERO_Wallet_connected = _WOWNERO_Wallet_connectedPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void WOWNERO_Wallet_setTrustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool arg,
  ) {
    return _WOWNERO_Wallet_setTrustedDaemon(
      wallet_ptr,
      arg,
    );
  }

  late final _WOWNERO_Wallet_setTrustedDaemonPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'WOWNERO_Wallet_setTrustedDaemon');
  late final _WOWNERO_Wallet_setTrustedDaemon =
      _WOWNERO_Wallet_setTrustedDaemonPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  bool WOWNERO_Wallet_trustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_trustedDaemon(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_trustedDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_trustedDaemon');
  late final _WOWNERO_Wallet_trustedDaemon = _WOWNERO_Wallet_trustedDaemonPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_setProxy(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> address,
  ) {
    return _WOWNERO_Wallet_setProxy(
      wallet_ptr,
      address,
    );
  }

  late final _WOWNERO_Wallet_setProxyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_setProxy');
  late final _WOWNERO_Wallet_setProxy = _WOWNERO_Wallet_setProxyPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int WOWNERO_Wallet_balance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _WOWNERO_Wallet_balance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _WOWNERO_Wallet_balancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>, ffi.Uint32)>>('WOWNERO_Wallet_balance');
  late final _WOWNERO_Wallet_balance = _WOWNERO_Wallet_balancePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int)>();

  int WOWNERO_Wallet_unlockedBalance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _WOWNERO_Wallet_unlockedBalance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _WOWNERO_Wallet_unlockedBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('WOWNERO_Wallet_unlockedBalance');
  late final _WOWNERO_Wallet_unlockedBalance =
      _WOWNERO_Wallet_unlockedBalancePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int)>();

  int WOWNERO_Wallet_viewOnlyBalance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _WOWNERO_Wallet_viewOnlyBalance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _WOWNERO_Wallet_viewOnlyBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('WOWNERO_Wallet_viewOnlyBalance');
  late final _WOWNERO_Wallet_viewOnlyBalance =
      _WOWNERO_Wallet_viewOnlyBalancePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int)>();

  bool WOWNERO_Wallet_watchOnly(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_watchOnly(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_watchOnlyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_watchOnly');
  late final _WOWNERO_Wallet_watchOnly = _WOWNERO_Wallet_watchOnlyPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_isDeterministic(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_isDeterministic(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_isDeterministicPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_isDeterministic');
  late final _WOWNERO_Wallet_isDeterministic =
      _WOWNERO_Wallet_isDeterministicPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_blockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_blockChainHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_blockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_blockChainHeight');
  late final _WOWNERO_Wallet_blockChainHeight =
      _WOWNERO_Wallet_blockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_approximateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_approximateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_approximateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_approximateBlockChainHeight');
  late final _WOWNERO_Wallet_approximateBlockChainHeight =
      _WOWNERO_Wallet_approximateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_estimateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_estimateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_estimateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_estimateBlockChainHeight');
  late final _WOWNERO_Wallet_estimateBlockChainHeight =
      _WOWNERO_Wallet_estimateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_daemonBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_daemonBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_daemonBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_daemonBlockChainHeight');
  late final _WOWNERO_Wallet_daemonBlockChainHeight =
      _WOWNERO_Wallet_daemonBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_daemonBlockChainTargetHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_daemonBlockChainTargetHeight(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_daemonBlockChainTargetHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_daemonBlockChainTargetHeight');
  late final _WOWNERO_Wallet_daemonBlockChainTargetHeight =
      _WOWNERO_Wallet_daemonBlockChainTargetHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_synchronized(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_synchronized(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_synchronizedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_synchronized');
  late final _WOWNERO_Wallet_synchronized = _WOWNERO_Wallet_synchronizedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_displayAmount(
    int amount,
  ) {
    return _WOWNERO_Wallet_displayAmount(
      amount,
    );
  }

  late final _WOWNERO_Wallet_displayAmountPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>>(
          'WOWNERO_Wallet_displayAmount');
  late final _WOWNERO_Wallet_displayAmount = _WOWNERO_Wallet_displayAmountPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int WOWNERO_Wallet_amountFromString(
    ffi.Pointer<ffi.Char> amount,
  ) {
    return _WOWNERO_Wallet_amountFromString(
      amount,
    );
  }

  late final _WOWNERO_Wallet_amountFromStringPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Char>)>>(
          'WOWNERO_Wallet_amountFromString');
  late final _WOWNERO_Wallet_amountFromString =
      _WOWNERO_Wallet_amountFromStringPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>)>();

  int WOWNERO_Wallet_amountFromDouble(
    double amount,
  ) {
    return _WOWNERO_Wallet_amountFromDouble(
      amount,
    );
  }
